--- a/Example/TagStyledView/TagCell2.xib
+++ b/Example/TagStyledView/TagCell2.xib
@@ -17,18 +17,24 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UsP-1r-eEt">
-                    <rect key="frame" x="10" y="10" width="355" height="67"/>
+                    <rect key="frame" x="10" y="20" width="318" height="47"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="nH2-8Z-dF2">
+                    <rect key="frame" x="333" y="0.0" width="32" height="87"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.081386886537075043" green="0.78161031007766724" blue="0.73659759759902954" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="UsP-1r-eEt" secondAttribute="bottom" constant="10" id="9AT-q1-TEu"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="UsP-1r-eEt" secondAttribute="trailing" constant="10" id="JoR-hs-7km"/>
+                <constraint firstItem="nH2-8Z-dF2" firstAttribute="leading" secondItem="UsP-1r-eEt" secondAttribute="trailing" constant="5" id="2PG-Le-QFk"/>
+                <constraint firstAttribute="bottom" secondItem="nH2-8Z-dF2" secondAttribute="bottom" id="3Lp-VP-XON"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="UsP-1r-eEt" secondAttribute="bottom" constant="20" id="9AT-q1-TEu"/>
+                <constraint firstAttribute="trailing" secondItem="nH2-8Z-dF2" secondAttribute="trailing" constant="10" id="F5a-Uv-Jwk"/>
                 <constraint firstItem="UsP-1r-eEt" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="uCN-sg-a4c"/>
-                <constraint firstItem="UsP-1r-eEt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="zfx-uu-ni4"/>
+                <constraint firstItem="nH2-8Z-dF2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ygC-xG-44K"/>
+                <constraint firstItem="UsP-1r-eEt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="zfx-uu-ni4"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -49,4 +55,7 @@
             <point key="canvasLocation" x="39.200000000000003" y="307.1964017991005"/>
         </view>
     </objects>
+    <resources>
+        <image name="swift" width="32" height="32"/>
+    </resources>
 </document>
